--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Digital Jessica Zavala</title>
-    <style>
-     body {
-        background-color: beige;
-     }
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
@@ -23,7 +19,7 @@
         </section>
         <section>
             <h2>Experiencia Laboral</h2>
-            <ul>
+            <ul class="lista-experiencia" id="lista-unica">
                 <li> <strong>poner mi experiencia laboral</strong></li>
                 <li> <strong> trabajo 2 </strong></li>
                 <li> <strong> trabajo 3 </strong></li>
@@ -38,8 +34,8 @@
         </section>
         <section>
             <h2> Cursos y certificacion</h2>
-            <ul>
-                <li> Intro a Git y Github </li>
+            <ul class="lista-experiencia">
+                <li class="texto-educacion"> Intro a Git y Github </li>
                 <li> Diseño Web Profesional Udemy</li>
                 <li> Fundamentos de programacion Udemy </li>
                 <li> JavaScript Moderno Udemy</li>
@@ -51,7 +47,7 @@
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
-                <li>GitHub</li>
+                <li class="texto-educacion">GitHub</li>
             </ul>
         </section>
         <section>
