--- a/index.html
+++ b/index.html
@@ -62,6 +62,30 @@
           </section>
         
     </div>
+    <div class="contenedor-padre">
+        <div class="hijo-uno"> 
+            hijo hijo-uno
+
+        </div>
+        <div class="hijo-2">
+            hijo dos
+
+        </div>
+        <div class="hijo-tres">
+            hijo tres
+
+        </div>
+        <div class="hijo-cuatro">
+             hijo cuatro
+
+        </div>
+        <div class="hijo=cinco">
+            hijo cinco
+
+        </div>
+
+    </div>
+
     <footer>
         <h4>Realizado por Jessica Zavala, Enero 6, 2025.</h4>
     </footer>
